Closed Bug 1642480 Opened 6 years ago Closed 6 years ago

Crash in [@ mozilla::a11y::nsAccUtils::IsARIALive]

Categories

(Core :: Disability Access APIs, defect, P1)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- unaffected
firefox77 --- unaffected
firefox78 --- fixed
firefox79 --- fixed

People

(Reporter: gsvelto, Assigned: Jamie)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-e41ca7aa-1fcd-4d8c-a003-d66b20200531.

Top 10 frames of crashing thread:

0 xul.dll static mozilla::a11y::nsAccUtils::IsARIALive accessible/base/nsAccUtils.cpp:477
1 xul.dll mozilla::a11y::Accessible::HandleAccEvent accessible/generic/Accessible.cpp:833
2 xul.dll mozilla::a11y::AccessibleWrap::HandleAccEvent accessible/windows/msaa/AccessibleWrap.cpp:1161
3 xul.dll static nsEventShell::FireEvent accessible/base/nsEventShell.cpp:43
4 xul.dll mozilla::a11y::NotificationController::ProcessMutationEvents accessible/base/NotificationController.cpp:480
5 xul.dll mozilla::a11y::NotificationController::WillRefresh accessible/base/NotificationController.cpp:836
6 xul.dll nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:1994
7 xul.dll mozilla::RefreshDriverTimer::TickRefreshDrivers layout/base/nsRefreshDriver.cpp:350
8 xul.dll mozilla::RefreshDriverTimer::Tick layout/base/nsRefreshDriver.cpp:367
9 xul.dll mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::TickRefreshDriver layout/base/nsRefreshDriver.cpp:745

This is a NULL pointer dereference, the oldest buildid for this crash is 20200512140204. Note that there's a single non-nightly crash but it seems unrelated.

Severity: -- → S2
Keywords: regression
Priority: -- → P1
Regressed by: 1572860
Has Regression Range: --- → yes
Assignee: nobody → jteh
Status: NEW → ASSIGNED
Pushed by mzehe@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3260905f68d1 Null check content in nsAccUtils::IsARIALive. r=MarcoZ
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

Comment on attachment 9153312 [details]
Bug 1642480: Null check content in nsAccUtils::IsARIALive.

Beta/Release Uplift Approval Request

  • User impact if declined: Crashes.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple null check.
  • String changes made/needed:
Attachment #9153312 - Flags: approval-mozilla-beta?

Comment on attachment 9153312 [details]
Bug 1642480: Null check content in nsAccUtils::IsARIALive.

a11y crash fix for 78.0b3

Attachment #9153312 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: