Bug 1642480: Null check content in nsAccUtils::IsARIALive. r=MarcoZ

Differential Revision: https://phabricator.services.mozilla.com/D77748